--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -23,6 +23,21 @@
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
+    margin-top: 5rem;
+  }
+
+  .hero-image {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
+    @include respond(tab-port) {
+      padding-bottom: 6.4rem;
+    }
+    @include respond(tab-land) {
+      height: 100%;
+    }
   }
 
   .hero-title {
